NetBSD Problem Report #42179

From bad@bsd.de  Tue Oct 13 21:28:08 2009
Return-Path: <bad@bsd.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 0744263B877
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 13 Oct 2009 21:28:08 +0000 (UTC)
Message-Id: <20091013212803.24D7E74DC@of-course-i-still-love-you.k.bsd.de>
Date: Tue, 13 Oct 2009 21:28:03 +0000 (UTC)
From: bad@bsd.de
Reply-To: bad@bsd.de
To: gnats-bugs@gnats.NetBSD.org
Subject: route(8) fails to detect and complain about missing arguments
X-Send-Pr-Version: 3.95

>Number:         42179
>Category:       bin
>Synopsis:       "route -n get" prints obscure error message instead of complaining about the missing argument
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Oct 13 21:30:00 +0000 2009
>Closed-Date:    Sat Mar 17 08:35:02 +0000 2012
>Last-Modified:  Sat Mar 17 08:50:02 +0000 2012
>Originator:     Christoph Badura
>Release:        NetBSD 5.99.20 (has been there forever)
>Organization:

bozotic software testing labs
>Environment:


System: NetBSD of-course-i-still-love-you 5.99.20 NetBSD 5.99.20 (XEN3_DOMU) #6: Mon Oct 12 22:27:22 UTC 2009 root@of-course-i-still-love-you:/m/obj/m/src/sys/arch/i386/compile/XEN3_DOMU i386
Architecture: i386
Machine: i386
>Description:

Invoking route(8) in the form of "route -flags cmd" without the required
argument(s) for "cmd" causes it to print an obscure error message.

The error has been there since revision 1.1 of route.c.

>How-To-Repeat:

% route -n get
route: writing to routing socket: Invalid argument
% sudo route -n add 10.1.1.1
route: writing to routing socket: Invalid argument
add host 10.1.1.1: Invalid argument

>Fix:


>Release-Note:

>Audit-Trail:
From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42179 CVS commit: src
Date: Tue, 3 May 2011 07:56:43 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Tue May  3 07:56:42 UTC 2011

 Modified Files:
 	src/distrib/sets/lists/tests: mi
 	src/etc/mtree: NetBSD.dist.tests
 	src/tests/sbin: Makefile
 Added Files:
 	src/tests/sbin/route: Makefile t_missing.sh

 Log Message:
 A test for non-critical/low PR bin/42179.


 To generate a diff of this commit:
 cvs rdiff -u -r1.323 -r1.324 src/distrib/sets/lists/tests/mi
 cvs rdiff -u -r1.43 -r1.44 src/etc/mtree/NetBSD.dist.tests
 cvs rdiff -u -r1.3 -r1.4 src/tests/sbin/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/sbin/route/Makefile \
     src/tests/sbin/route/t_missing.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42179 CVS commit: src/sbin/route
Date: Fri, 16 Mar 2012 22:13:45 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sat Mar 17 02:13:45 UTC 2012

 Modified Files:
 	src/sbin/route: route.c

 Log Message:
 PR/42179: Christoph Badura: Be a little friendlier about missing args.


 To generate a diff of this commit:
 cvs rdiff -u -r1.136 -r1.137 src/sbin/route/route.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Sat, 17 Mar 2012 08:35:02 +0000
State-Changed-Why:

Fixed.    



From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42179 CVS commit: src/tests/sbin/route
Date: Sat, 17 Mar 2012 08:34:55 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Sat Mar 17 08:34:55 UTC 2012

 Modified Files:
 	src/tests/sbin/route: t_missing.sh

 Log Message:
 PR bin/42179 was fixed; remove xfail.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/tests/sbin/route/t_missing.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.