PR/42179: Christoph Badura: Be a little friendlier about missing args.